Added image and description to first recipe

--- a/recipes/peanutbutterbananabagel.html
+++ b/recipes/peanutbutterbananabagel.html
@@ -7,6 +7,11 @@
     <title>Peanut Butter and Banana Bagel</title>
 </head>
 <body>
-    <h1>Peanut Butter and Banana on a Cinnamon and Raisin Bagel</h1>
+    <h1>Peanut Butter and Banana Bagel</h1>
+    <img src="../images/peanut-butter_lrg.jpg" width="700" height="350" alt="Toasted bagels topped with peanut butter and sliced bananas">
+    <p><h3>Why it's so good!</h3></p>
+    <p>This hearty lunch is a fantastic way to get the carbs you'll need for energy throughout the rest of your day. The toasted bagels provide the perfect crunch to the decadent peanut butter and the soft, sweet sliced banana.</p> 
+    
+    <p>Wash it down with a protein shake for the perfect post-gym meal!</p>
 </body>
 </html>
