--- a/recipes/peanutbutterbananabagel.html
+++ b/recipes/peanutbutterbananabagel.html
@@ -9,9 +9,25 @@
 <body>
     <h1>Peanut Butter and Banana Bagel</h1>
     <img src="../images/peanut-butter_lrg.jpg" width="700" height="350" alt="Toasted bagels topped with peanut butter and sliced bananas">
-    <p><h3>Why it's so good!</h3></p>
+    <h3>Why it's so good!</h3>
     <p>This hearty lunch is a fantastic way to get the carbs you'll need for energy throughout the rest of your day. The toasted bagels provide the perfect crunch to the decadent peanut butter and the soft, sweet sliced banana.</p> 
     
     <p>Wash it down with a protein shake for the perfect post-gym meal!</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Bagels</li>
+        <li>Peanut Butter</li>
+        <li>Banana</li>
+        <li>(Optional) Protein powder</li>
+        <li>(Optional) Milk</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Carefully slice the bagel with a breadknife and pop them in the toaster. Give it time as this recipe works best with a nice and crunchy bagel as opposed to a really chewy one.</li>
+        <li>Spread the peanut butter on top. Use about 20g of peanut butter for each side. More is better in this scenario, and don't worry if you make a mess!</li>
+        <li>Slice the banana into about ten segments and place neatly around each side of the bagel.</li>
+        <li>(Optional) Whip up a quick protein shake - two flavours that go really well with the bagel are vanilla and salted caramel.</li>
+    </ol>
 </body>
 </html>
