added scrambled eggs recipe

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <p><a href="recipes/peanutbutterbananabagel.html">Peanut Butter and Banana Bagel</a></p>
+        <p><a href="recipes/scrambledeggs.html">Perfect Scrambled Eggs</a></p>
     </body>
 </html>
