added smoked salmon crackers recipe

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Odin Recipes</h1>
         <p><a href="recipes/peanutbutterbananabagel.html">Peanut Butter and Banana Bagel</a></p>
         <p><a href="recipes/scrambledeggs.html">Perfect Scrambled Eggs</a></p>
+        <p><a href="recipes/salmoncrackers.html">Salmon and Cream Cheese Crackers</a></p>
     </body>
 </html>
