added gif to homepage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="./images/6thmp7rddn771.gif" width="300" alt="an animated emote of a muscly avatar wearing gold glasses and a chain flexing their arms">
         <p><a href="recipes/peanutbutterbananabagel.html">Peanut Butter and Banana Bagel</a></p>
         <p><a href="recipes/scrambledeggs.html">Perfect Scrambled Eggs</a></p>
         <p><a href="recipes/salmoncrackers.html">Salmon and Cream Cheese Crackers</a></p>
